--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,22 +1,44 @@
 body
 {
-    color: darkviolet;
+    color: #333;
     text-align: center;
-    font-family: "Arial";
-    font-size: 30px;
-    margin: 1;
+    font-family: "Courier";
+    font-size: 16px;
+    margin: 0;
     padding: 0;
 }
-#container
+
+#cabecera
 {
-    width: 80%;
-    padding: lem;
-    text-align: center;
-    border: 2px solid black;
-    margin: 1 auto;
+    background: #33A;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
 }
 
-#contariner h1
+#cabecera #tagline
 {
-    font-size: 25px;
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
+#container
+{
+    width: 70%;
+    padding: 0;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+}
+
+#container h1
+{
+    font-size: 20px;
+}
+#post
+{
+    padding: 1em;
 }
